[package]
name = "dblog"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dblog"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
arrayref = "0.3.6"
byteorder = "1.4.3"
bytes = "1.1.0"
solana-program = "1.10.31"
uuid = { version = "1.1.2", features = ["v5"]}
